bug squash

--- a/index.css
+++ b/index.css
@@ -135,6 +135,39 @@ iframe {
     width: 70vw;
 }
 
+.pop-underline {
+    background: none;
+    border: none;
+    color: #1E1E1E;
+    cursor: pointer;
+    font-size: 20px;
+    overflow: hidden;
+    position: relative;
+    transition: color 600ms ease-in-out;
+}
+
+.pop-underline::after {
+    border-bottom: 3px solid #1E1E1E;
+    content: "";
+    display: block;
+    margin-top: 3px;
+    opacity: 0;
+    position: relative;
+    transition: all 450ms ease-in-out;
+    width: 1%;
+
+}
+
+.pop-underline:hover::after {
+    opacity: 1;
+    width: 100%;
+}
+
+.pop-underline:hover {
+    color: #1E1E1E;
+}
+
+
 .photography {
     align-items: center;
     background-color: #E6E6E6;
@@ -249,6 +282,7 @@ img {
 
 
 .image:hover {
+    cursor: pointer;
     opacity: 0.7;
 }
 
